# polymarket-agent

./: .env.example  README.md  SKILL.md  pyproject.toml
src/polymarket_agent/: __init__.py  __main__.py  agent.py  cli.py  config.py  crypto_prices.py
src/polymarket_agent/analyst/: llm.py  prompts.py
src/polymarket_agent/clob/: client.py
src/polymarket_agent/data/: client.py
src/polymarket_agent/gamma/: client.py
src/polymarket_agent/strategies/: base.py  llm_strategy.py
